# NecessidadesHabicionais

./: README.md  fuzzy_system.py  pyproject.toml  requirements.txt  streamlit_app.py
