[project]
name = "fuzzy-housing-system"
version = "2.0.0"
description = "Sistema Fuzzy Modular para Diagnóstico de Necessidades Habitacionais"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.59.2",
    "scikit-fuzzy>=0.4.2",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
]

[tool.uv]
package = false
